动态添加1.0beta-未测试